--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.dianaclabel.apirest</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>apirest-java</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>apirest</name>
 	<description>Demo project for Spring Boot</description>
